--- a/css/theme/source/es6.scss
+++ b/css/theme/source/es6.scss
@@ -65,7 +65,74 @@ $selectionBackgroundColor: rgba(0, 0, 0, 0.99);
 
     code.small {
       font-size: 0.7em;
+      line-height: 1.4em;
+    }
+
+    code.smaller {
+      font-size: 0.7em;
       line-height: 1em;
+    }    
+
+    code.smallest {
+      font-size: 0.5em;
+      line-height: 1em;
+    }    
+  }
+
+  .fragment {
+    &.visible {
+      p {
+        color: #999;
+      }
+      &.current-fragment p {
+        color: #000;
+      }
+    }
+  } 
+
+  .single-fragment-view {
+    .fragment {
+      &.visible {
+        display: none;
+
+        &.current-fragment {
+          display: block;
+        }
+      }
     }
   }
+
+  section.step-code {
+    pre.program {
+      box-shadow: none;
+      float: left;
+      width: 80%;
+      margin-left: -20%;
+
+      strong {
+        background-color: #000; 
+        color: #fff;
+      }
+
+      b {
+        color: #999;
+      }
+    }
+  }
+
+  pre.output {
+    float: right;
+    width: 55%;
+    margin-right: -30%;
+    font-size: 0.8em;
+
+    background-color: #ff0;
+    box-shadow: none;
+    padding: 1em;
+    line-height: 2em;
+
+  }
 }
+
+
+
