--- a/css/theme/es6.css
+++ b/css/theme/es6.css
@@ -148,6 +148,8 @@ body {
     font-size: 120%;
     margin: 0 0.1em; }
 .reveal pre {
+  box-shadow: none;
+  border: none;
   width: 100%;
   font-size: 1em; }
   .reveal pre code.small {
@@ -171,18 +173,27 @@ body {
   box-shadow: none;
   float: left;
   width: 80%;
-  margin-left: -20%; }
+  margin-left: -10%; }
   .reveal section.step-code pre.program strong {
     background-color: #000;
     color: #fff; }
   .reveal section.step-code pre.program b {
     color: #999; }
-.reveal pre.output {
+.reveal section.step-code pre.output {
   float: right;
-  width: 55%;
-  margin-right: -30%;
-  font-size: 0.8em;
+  width: 35%;
+  margin-right: -10%;
+  font-size: 0.5em;
   background-color: #ff0;
   box-shadow: none;
   padding: 1em;
   line-height: 2em; }
+.reveal section.side-by-side-code code {
+  font-size: 80%;
+  line-height: 1e; }
+.reveal section.side-by-side-code code.left {
+  float: left;
+  width: 47%; }
+.reveal section.side-by-side-code code.right {
+  float: right;
+  width: 47%; }
